# custom_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: DepthStampedId.msg  DroneState.msg  GeoImage.msg  PhotoScan.msg  PoseStampedId.msg  StitchedImageCompressed.msg
